--- a/temples.html
+++ b/temples.html
@@ -25,45 +25,45 @@
 
     <main>
         <h2>Home</h2>
-        <section class="gallery">
-            <figure>
-                <img src="images/Boise-Idaho-Temple2.jpg" alt="San Diego California Temple">
-                <figcaption>Bosie Idaho</figcaption>
-            </figure>
-            <figure>
-                <img src="images/cedarcity.jpg" alt="San Diego California Temple">
-                <figcaption>Cedar City Utah</figcaption>
-            </figure>
-            <figure>
-                <img src="images/lindon utah.jpg" alt="San Diego California Temple">
-                <figcaption>Lindon Utah</figcaption>
-            </figure>
-            <figure>
-                <img src="images/oakland.jpg" alt="San Diego California Temple">
-                <figcaption>Oakland California</figcaption>
-            </figure>
-            <figure>
-                <img src="images/okinawa-japan-temple.jpg" alt="San Diego California Temple">
-                <figcaption>Okinawa Japan</figcaption>
-            </figure>
-            <figure>
-                <img src="images/payson.jpg" alt="San Diego California Temple">
-                <figcaption>Payson Utah</figcaption>
-            </figure>
-            <figure>
-                <img src="images/seoul-korea-temple-22305-main.jpg" alt="San Diego California Temple">
-                <figcaption>Seoul Korea</figcaption>
-            </figure>
-            <figure>
-                <img src="images/smithfield-utah-temple-23671-main.jpg" alt="San Diego California Temple">
-                <figcaption>Smithfield Utahj</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Washington-DC-Temple1.jpg" alt="San Diego California Temple">
-                <figcaption>Washington DC</figcaption>
-            </figure>
-
-        </section>
+            <section class="gallery">
+                <figure>
+                    <img src="images/Boise-Idaho-Temple2.jpg" alt="San Diego California Temple">
+                    <figcaption>Bosie Idaho</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/cedarcity.jpg" alt="San Diego California Temple">
+                    <figcaption>Cedar City Utah</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/lindon-utah.jpg" alt="San Diego California Temple">
+                    <figcaption>Lindon Utah</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/oakland.jpg" alt="San Diego California Temple">
+                    <figcaption>Oakland California</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/okinawa-japan-temple.jpg" alt="San Diego California Temple">
+                    <figcaption>Okinawa Japan</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/payson.jpg" alt="San Diego California Temple">
+                    <figcaption>Payson Utah</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/seoul-korea-temple-22305-main.jpg" alt="San Diego California Temple">
+                    <figcaption>Seoul Korea</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/smithfield-utah-temple-23671-main.jpg" alt="San Diego California Temple">
+                    <figcaption>Smithfield Utahj</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Washington-DC-Temple1.jpg" alt="San Diego California Temple">
+                    <figcaption>Washington DC</figcaption>
+                </figure>
+           
+            </section>
     </main>
 
     <footer>
