--- a/temples.html
+++ b/temples.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A picture albulm of my favorite temples">
+    <meta name="author" content="Ty Moulton">
     <title>Temple Album</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 768px)">
     <script defer src="scripts/temples.js"></script>
+
 </head>
 <body>
     <header>
@@ -67,7 +70,7 @@
     </main>
 
     <footer>
-        <p>©2024 <span id="author">Ty MOulton</span> | <span id="location">Idaho</span></p>
+        <p>©2024 <span id="author">Ty Moulton</span> | <span id="location">Idaho</span></p>
         <p>Last Modification: <span id="last-modified"></span></p>
     </footer>
 </body>
