--- a/temples.html
+++ b/temples.html
@@ -54,11 +54,11 @@
                     <figcaption>Payson Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/seoul-korea-temple-22305-main.jpg" alt="San Diego California Temple">
+                    <img src="images/korea.png" alt="San Diego California Temple">
                     <figcaption>Seoul Korea</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/smithfield-utah-temple-23671-main.jpg" alt="San Diego California Temple">
+                    <img src="images/smith.png" alt="San Diego California Temple">
                     <figcaption>Smithfield Utahj</figcaption>
                 </figure>
                 <figure>
