--- a/temples.html
+++ b/temples.html
@@ -54,12 +54,12 @@
                     <figcaption>Payson Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/korea.png" alt="San Diego California Temple">
-                    <figcaption>Seoul Korea</figcaption>
+                    <img src="images/Saltlake.jpg" alt="San Diego California Temple">
+                    <figcaption>Salt Lake Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/smith.png" alt="San Diego California Temple">
-                    <figcaption>Smithfield Utahj</figcaption>
+                    <img src="images/redlands.jpg" alt="San Diego California Temple">
+                    <figcaption>Redlands California</figcaption>
                 </figure>
                 <figure>
                     <img src="images/Washington-DC-Temple1.jpg" alt="San Diego California Temple">
