--- a/temples.html
+++ b/temples.html
@@ -34,35 +34,35 @@
                     <figcaption>Bosie Idaho</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/cedarcity.jpg" alt="San Diego California Temple">
+                    <img src="images/cedarcity.jpg" alt="Cedar city temple">
                     <figcaption>Cedar City Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/lindon-utah.jpg" alt="San Diego California Temple">
+                    <img src="images/lindon-utah.jpg" alt="Lindon utah temple Temple">
                     <figcaption>Lindon Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/oakland.jpg" alt="San Diego California Temple">
+                    <img src="images/oakland.jpg" alt="oakland California Temple">
                     <figcaption>Oakland California</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/okinawa-japan-temple.jpg" alt="San Diego California Temple">
+                    <img src="images/okinawa-japan-temple.jpg" alt="Okinawa japan Temple">
                     <figcaption>Okinawa Japan</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/payson.jpg" alt="San Diego California Temple">
+                    <img src="images/payson.jpg" alt="payson utah Temple">
                     <figcaption>Payson Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Saltlake.jpg" alt="San Diego California Temple">
+                    <img src="images/Saltlake.jpg" alt="Salt lake utah Temple">
                     <figcaption>Salt Lake Utah</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/redlands.jpg" alt="San Diego California Temple">
+                    <img src="images/redlands.jpg" alt="redlands california temple">
                     <figcaption>Redlands California</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Washington-DC-Temple1.jpg" alt="San Diego California Temple">
+                    <img src="images/Washington-DC-Temple1.jpg" alt="Washington DC Temple">
                     <figcaption>Washington DC</figcaption>
                 </figure>
            
