--- a/place.html
+++ b/place.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-        <p>&copy; <span id="currentYear"></span> Rubia Magdelena Francesco • Hawaii</p>
+        <p>&copy; <span id="currentYear"></span> Ty Moulton • Hawaii</p>
         <p>Last Modification: <span id="lastModified"></span></p>
     </footer>
 </body>
