--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -6,9 +6,9 @@
     <meta name="description" content="A picture albulm of my favorite temples">
     <meta name="author" content="Ty Moulton">
     <title>Temple Album</title>
-    <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 768px)">
-    <script defer src="scripts/temples.js"></script>
+    <link rel="stylesheet" href="week04/styles/temples.css">
+    <link rel="stylesheet" href="week04/styles/temples-large.css" media="screen and (min-width: 768px)">
+    <script defer src="week04/scripts/temples.js"></script>
 
 </head>
 <body>
