--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -34,13 +34,12 @@
     <div class="section">
         <h2>Site Name</h2>
         <p><strong>Idaho Outdoor Explorer</strong></p>
-        <p>This name was selected because it reflects the focus of the website—exploring outdoor activities in Idaho, including hunting, fishing, and hiking. The name is memorable and descriptive for a regional outdoor activities website.</p>
-        <p>Optional domain availability: idahooutdoorexplorer.com</p>
+        <p>This name was selected because its the focus of the website outdoor activities in Idaho, including hunting, fishing, and hiking.</p>
     </div>
 
     <div class="section">
         <h2>Site Purpose</h2>
-        <p>The purpose of this website is to provide a comprehensive guide for outdoor enthusiasts in Idaho. It will include sections for hunting, fishing, and hiking, offering tips, regulations, trail guides, and gear recommendations. Users will also be able to access updates on seasonal activities, regulations, and community events.</p>
+        <p>The purpose of this website is to provide a comprehensive guide for outdoor people in Idaho. It will include sections for hunting, fishing, and hiking, offering tips, regulations, trail guides, and gear recommendations. </p>
     </div>
 
     <div class="section">
