--- a/project/hiking.html
+++ b/project/hiking.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="path/to/logo.png" alt="Logo" class="logo">
+           
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -18,31 +18,52 @@
                     <li><a href="hiking.html" class="active">Hiking</a></li>
                 </ul>
             </nav>
-            <img src="path/to/profile.png" alt="Profile Image" class="profile">
+            
         </div>
     </header>
 
     <main>
-        <h1>Best Hiking Trails in Idaho</h1>
+        <!-- Hero Section for Hiking -->
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Best Hiking Trails in Idaho</h1>
+                <p>Experience Idaho's scenic trails, perfect for all hiking levels.</p>
+            </div>
+            <img src="https://tiemoulton.github.io/wdd131/project/images/main.jpg" alt="Hiking in Idaho" class="background-image">
+        </div>
 
-        <section>
-            <h3>1. Sawtooth Lake Trail</h3>
-            <p>A rewarding hike with stunning alpine lake views and challenging mountain terrain.</p>
-            <img data-src="path/to/sawtooth-lake.jpg" alt="Sawtooth Lake Hiking Trail">
+        <!-- Full-width Location Images with Text Overlay -->
+        <section class="locations">
 
-            <h3>2. Redfish Lake Trail</h3>
-            <p>Perfect for families, offering scenic lake views with easy-to-moderate trails.</p>
-            <img data-src="path/to/redfish-lake.jpg" alt="Redfish Lake Hiking Trail">
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Sawtooth Lake Trail</h2>
+                    <p>A rewarding hike with stunning alpine lake views and challenging mountain terrain.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/sawtooth.png" alt="Sawtooth Lake Hiking Trail" class="background-image">
+            </div>
 
-            <h3>3. Table Rock Trail</h3>
-            <p>A short, steep climb near Boise that rewards with panoramic city and foothill views.</p>
-            <img data-src="path/to/table-rock.jpg" alt="Table Rock Hiking Trail">
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Redfish Lake Trail</h2>
+                    <p>Perfect for families, offering scenic lake views with easy-to-moderate trails.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/redfishlake.jpg" alt="Redfish Lake Hiking Trail" class="background-image">
+            </div>
+
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Table Rock Trail</h2>
+                    <p>A short, steep climb near Boise that rewards with panoramic city and foothill views.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/tablerock.jpg" alt="Table Rock Hiking Trail" class="background-image">
+            </div>
+
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Idaho Outdoor Explorer</p>
-        <a href="attributions.html">Image & Content Attributions</a>
+        <p>&copy; Ty Moulton</p>
     </footer>
 
     <script src="scripts/script.js" defer></script>
