--- a/project/hunting.html
+++ b/project/hunting.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="path/to/logo.png" alt="Logo" class="logo">
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -18,31 +18,53 @@
                     <li><a href="hiking.html">Hiking</a></li>
                 </ul>
             </nav>
-            <img src="path/to/profile.png" alt="Profile Image" class="profile">
+           
         </div>
     </header>
 
     <main>
-        <h1>Top Hunting Areas in Idaho</h1>
+        <!-- Hero Section for Hunting -->
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Top Hunting Areas in Idaho</h1>
+                <p>Discover prime hunting locations for elk, deer, and more in Idaho.</p>
+            </div>
+            <img src="https://tiemoulton.github.io/wdd131/project/images/main.jpg" alt="Hunting in Idaho" class="background-image">
+        </div>
 
-        <section>
-            <h3>1. Clearwater National Forest</h3>
-            <p>Perfect for elk hunting in the fall, with vast forest trails.</p>
-            <img data-src="path/to/clearwater-forest.jpg" alt="Clearwater National Forest Hunting Spot">
+        <!-- Full-width Location Images with Text Overlay -->
+        <section class="locations">
 
-            <h3>2. Frank Church Wilderness</h3>
-            <p>Remote area ideal for big game hunting, such as deer and black bears.</p>
-            <img data-src="" alt="Frank Church Wilderness Hunting Spot">
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Clearwater National Forest</h2>
+                    <p>Perfect for elk hunting in the fall, with vast forest trails.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/clearwater.webp" alt="Clearwater National Forest Hunting Spot" class="background-image">
+            </div>
 
-            <h3>3. Owyhee Mountains</h3>
-            <p>Known for deer and pronghorn hunting, offering diverse terrain.</p>
-            <img data-src="path/to/owyhee-mountains.jpg" alt="Owyhee Mountains Hunting Spot">
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Frank Church Wilderness</h2>
+                    <p>Remote area ideal for big game hunting, such as deer and black bears.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/frankchurch.jpg" alt="Frank Church Wilderness Hunting Spot" class="background-image">
+            </div>
+
+            <div class="hero-image">
+                <div class="hero-text">
+                    <h2>Owyhee Mountains</h2>
+                    <p>Known for deer and pronghorn hunting, offering diverse terrain.</p>
+                </div>
+                <img src="https://tiemoulton.github.io/wdd131/project/images/owyhee.jpg" alt="Owyhee Mountains Hunting Spot" class="background-image">
+            </div>
+
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Idaho Outdoor Explorer</p>
-        <a href="attributions.html">Image & Content Attributions</a>
+        <p>&copy; Ty Moulton</p>
+
     </footer>
 
     <script src="scripts/script.js" defer></script>
