--- a/project/index.html
+++ b/project/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="path/to/logo.png" alt="Logo" class="logo">
+            
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
@@ -18,21 +18,26 @@
                     <li><a href="hiking.html">Hiking</a></li>
                 </ul>
             </nav>
-            <img src="path/to/profile.png" alt="Profile Image" class="profile">
+            
         </div>
     </header>
 
     <main>
-        <h1>Welcome to Idaho Outdoor Explorer</h1>
-        <p>Explore Idaho's best fishing, hunting, and hiking spots with guides, tips, and recommendations.</p>
-        <img src="path/to/intro-image.jpg" alt="Introduction Image" class="main-image">
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Welcome to Idaho Outdoor Explorer</h1>
+                <p>Explore Idaho's best fishing, hunting, and hiking spots with guides, tips, and recommendations.</p>
+            </div>
+            <img src="https://tiemoulton.github.io/wdd131/project/images/main.jpg" alt="Idaho Landscape" class="background-image">
+        </div>
     </main>
 
     <footer>
         <p>&copy; Ty Moulton</p>
-        <a href="WDD 131 Final Project">Image & Content Attributions</a>
+        <a href="attributions.html">WDD 131 Final Project</a>
     </footer>
 
     <script src="scripts/script.js" defer></script>
 </body>
 </html>
+
