--- a/project/fishing.html
+++ b/project/fishing.html
@@ -24,7 +24,7 @@
         <!-- Main Hero Section for Fishing Page -->
         <div class="hero-image">
             <div class="hero-text">
-                <h1>Welcome to Idaho Outdoor Explorer!</h1>
+                <h1>Best Fishing PLaces in Idaho!</h1>
                 <p>Explore Idaho's best fishing locations, ideal for anglers of all levels.</p>
             </div>
             <img src="https://tiemoulton.github.io/wdd131/project/images/main.jpg" alt="Fishing in Idaho" class="background-image">
